--- a/SIGNUP.html
+++ b/SIGNUP.html
@@ -153,7 +153,7 @@
 <div class="login-container">
   <h1> Login </h1>
 
-  <form action="CHOICES.html" method="post">
+  <form action="index.html" method="post">
     <label for="username">Username</label>
     <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
@@ -170,3 +170,4 @@
 
 </body>
 </html>
+
